deploy: d2554815eba352658725fff96b6b30ae166adc0b

--- a/404.html
+++ b/404.html
@@ -27,7 +27,10 @@
 <a href=/>about</a>
 </li>
 <li>
-<a href=/rox-refine-simulator>rox refine simulator</a>
+<a href=/rox-refine-simulator>rox repeated refine simulator</a>
+</li>
+<li>
+<a href=/rox-refine-step-simulator>rox step refine simulator</a>
 </li>
 </ul>
 </nav>
