--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <link type=text/css rel=stylesheet href=/css/custom.min.e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855.css integrity="sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=">
 <link rel=alternate type=application/rss+xml+xml href=https://thesilentlibrarian.github.io/index.xml title="The Silent Librarian">
 <script type=application/ld+json>{"@context":"http://schema.org","@type":"WebSite","url":"https:\/\/thesilentlibrarian.github.io\/","name":"","author":{"@type":"Person","name":""},"description":""}</script>
+<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-6MJ5CC2B8Z','auto'),ga('send','pageview'))</script>
+<script async src=https://www.google-analytics.com/analytics.js></script>
 </head>
 <body>
 <div class=burger__container>
