--- a/404.html
+++ b/404.html
@@ -12,8 +12,8 @@
 <link type=text/css rel=stylesheet href=/css/404.min.2b1ffedfa1cd39e26610d196bbb8604dde61be38e0eb9245f86e40a758e86697.css integrity="sha256-Kx/+36HNOeJmENGWu7hgTd5hvjjg65JF+G5Ap1joZpc=">
 <link type=text/css rel=stylesheet href=/css/custom.min.e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855.css integrity="sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=">
 <script type=application/ld+json>{"@context":"http://schema.org","@type":"WebSite","url":"https:\/\/thesilentlibrarian.github.io\/404.html","name":"404 Page not found","author":{"@type":"Person","name":""},"description":""}</script>
-<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-6MJ5CC2B8Z','auto'),ga('send','pageview'))</script>
-<script async src=https://www.google-analytics.com/analytics.js></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6MJ5CC2B8Z"></script>
+<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-6MJ5CC2B8Z',{anonymize_ip:!1})}</script>
 </head>
 <body>
 <div class=burger__container>
