--- a/rox-refine-simulator/index.html
+++ b/rox-refine-simulator/index.html
@@ -12,8 +12,8 @@
 <link type=text/css rel=stylesheet href=/css/post.min.86d1effd4c412b85ac13db53a90c473a0f256f789b821e131125c9aa25cb6a6d.css integrity="sha256-htHv/UxBK4WsE9tTqQxHOg8lb3ibgh4TESXJqiXLam0=">
 <link type=text/css rel=stylesheet href=/css/custom.min.e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855.css integrity="sha256-47DEQpj8HBSa+/TImW+5JCeuQeRkm5NMpJWZG3hSuFU=">
 <script type=application/ld+json>{"@context":"http://schema.org","@type":"WebSite","url":"https:\/\/thesilentlibrarian.github.io\/rox-refine-simulator\/","name":"ROX Repeated Refine Simulator","author":{"@type":"Person","name":""},"description":""}</script>
-<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-6MJ5CC2B8Z','auto'),ga('send','pageview'))</script>
-<script async src=https://www.google-analytics.com/analytics.js></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6MJ5CC2B8Z"></script>
+<script>var doNotTrack=!1;if(!doNotTrack){window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','G-6MJ5CC2B8Z',{anonymize_ip:!1})}</script>
 </head>
 <body>
 <div class=burger__container>
