--- a/rox-refine-simulator/index.html
+++ b/rox-refine-simulator/index.html
@@ -69,6 +69,14 @@ Then click the &ldquo;Run Simulation&rdquo; button.</p>
 <input id=input-total-experiment type=number placeholder="total experiment" value=100000>
 </div>
 <div class=input-group>
+<label>Phracon 1 Price</label>
+<input id=input-phracon-price type=number placeholder="phracon 1 price" value=2000>
+<div class=input-desc>
+*Price for Phracon 2 and 3 will be derived. Phracon 2 price is 4x, Phracon 3 is 16x.
+<div>
+</div>
+<br>
+<div class=input-group>
 <button id=btn-run>Run Simulation</button>
 </div>
 </div>
@@ -146,7 +154,7 @@ During the simulation, 95% of the experiment reach the target level after <b cla
 </div>
 </div>
 </div>
-<style>._rox_refine_simulator{margin-top:20px;margin-bottom:20px}._rox_refine_simulator .input-group{margin-bottom:20px}._rox_refine_simulator label{display:block;font-weight:700;margin-bottom:10px}._rox_refine_simulator input{font-size:20px;border-radius:4px;border:2px solid #333;padding:4px 8px}._rox_refine_simulator button{padding:8px 20px;font-size:20px;border-radius:4px;border:2px solid #333;cursor:pointer}._rox_refine_simulator button:active{background-color:#999}._rox_refine_simulator table{margin-top:20px;margin-bottom:20px}._rox_refine_simulator table td{font-size:14px}._rox_refine_simulator table td:first-child{font-weight:700}#result,#result-placeholder-running{display:none}</style>
+<style>._rox_refine_simulator{margin-top:20px;margin-bottom:20px}._rox_refine_simulator .input-group{margin-bottom:20px}._rox_refine_simulator label{display:block;font-weight:700;margin-bottom:10px}._rox_refine_simulator input{font-size:20px;border-radius:4px;border:2px solid #333;padding:4px 8px}._rox_refine_simulator button{padding:8px 20px;font-size:20px;border-radius:4px;border:2px solid #333;cursor:pointer}._rox_refine_simulator button:active{background-color:#999}._rox_refine_simulator table{margin-top:20px;margin-bottom:20px}._rox_refine_simulator table td{font-size:14px}._rox_refine_simulator table td:first-child{font-weight:700}._rox_refine_simulator .input-desc{font-size:12px;margin-top:2px}#result,#result-placeholder-running{display:none}</style>
 <script src=https://cdn.jsdelivr.net/npm/chart.js@3.4.1/dist/chart.min.js></script>
 <script src=/rox-refine-simulator/script.js></script>
 </article>
