deploy: 0bedc7cf7eeaaee5c81c6ac68af7b5ae34105a66

--- a/rox-refine-simulator/index.html
+++ b/rox-refine-simulator/index.html
@@ -69,10 +69,10 @@ Then click the &ldquo;Run Simulation&rdquo; button.</p>
 <input id=input-total-experiment type=number placeholder="total experiment" value=100000>
 </div>
 <div class=input-group>
-<label>Phracon 1 Price</label>
-<input id=input-phracon-price type=number placeholder="phracon 1 price" value=2000>
+<label>Oridecon Price</label>
+<input id=input-phracon-price type=number placeholder="phracon 1 price" value=4000>
 <div class=input-desc>
-*Price for Phracon 2 and 3 will be derived. Phracon 2 price is 4x, Phracon 3 is 16x.
+*Price for Enriched Oridecon and HD Oridecon will be derived. Enriched price is 4x, HD is 16x.
 <div>
 </div>
 <br>
