deploy: 53452518222cb68749b5eec81678c6a90406fc7e

--- a/404.html
+++ b/404.html
@@ -34,6 +34,9 @@
 <li>
 <a href=/rox-refine-step-simulator>rox step refine simulator</a>
 </li>
+<li>
+<a href=/terminal>terminal</a>
+</li>
 </ul>
 </nav>
 <main>
