--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang=en-us>
 <head>
-<meta name=generator content="Hugo 0.86.0">
+<meta name=generator content="Hugo 0.87.0">
 <title>The Silent Librarian</title>
 <meta charset=utf-8>
 <meta name=language content="en">
@@ -35,6 +35,9 @@
 </li>
 <li>
 <a href=/rox-refine-step-simulator>rox step refine simulator</a>
+</li>
+<li>
+<a href=/terminal>terminal</a>
 </li>
 </ul>
 </nav>
