--- a/rox-refine-step-simulator/index.html
+++ b/rox-refine-step-simulator/index.html
@@ -34,6 +34,9 @@
 <li>
 <a href=/rox-refine-step-simulator>rox step refine simulator</a>
 </li>
+<li>
+<a href=/terminal>terminal</a>
+</li>
 </ul>
 </nav>
 <main>
@@ -110,6 +113,10 @@ For blue weapon, multiply with 2. For gold weapon, multiply with 4.
 <a class=pagination__item href=https://thesilentlibrarian.github.io/rox-refine-simulator/>
 <span class=pagination__label>Previous Post</span>
 <span class=pagination__title>ROX Repeated Refine Simulator</span>
+</a>
+<a class=pagination__item href=https://thesilentlibrarian.github.io/terminal/>
+<span class=pagination__label>Next Post</span>
+<span class=pagination__title>Terminal</span>
 </a>
 </div>
 <footer class=post__footer>
