--- a/rox-refine-simulator/index.html
+++ b/rox-refine-simulator/index.html
@@ -34,6 +34,9 @@
 <li>
 <a href=/rox-refine-step-simulator>rox step refine simulator</a>
 </li>
+<li>
+<a href=/terminal>terminal</a>
+</li>
 </ul>
 </nav>
 <main>
